# VisualizingPoetry

./: README.md  pyproject.toml  requirements.txt
scripts/: evaluate.sh  infer.sh  prepare_data.sh  train.sh
src/configs/: dataset.yaml  default.yaml  eval.yaml  model.yaml  train.yaml
src/data/: datamodule.py  datasets.py  text_process.py  transforms.py
src/evaluation/: evaluator.py  reporting.py
src/evaluation/metric/: bertscore.py  cider.py  clipscore.py  fid.py  inception_score.py  spice.py
src/inference/: generate.py  save_io.py
src/models/: poetic_model.py
src/models/consistency/: clip_similarity.py  combiner.py  pipeline.py  text_relevance.py  topic_model.py
src/models/fusion/: attention.py  decoder.py  fuse.py  interaction.py
src/models/pmsum/: encoder.py  exporter.py  multitask_heads.py
src/poetic_vis/cli/: evaluate.py  infer.py  train.py
src/training/: checkpoint.py  logger.py  losses.py  optim.py  schedulers.py  trainer.py
tests/: test_data.py  test_metrics.py  test_models.py
